--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gsap": "^3.13.0",
     "gsap-trial": "^3.12.7",
     "loaders.css": "^0.1.2",
+    "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
